// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON in/out json -> json 1`] = `
"{
  \\"models\\": {
    \\"common\\": {
      \\"isIncludeOnly\\": true,
      \\"fields\\": {
        \\"id\\": {
          \\"type\\": \\"uuid\\",
          \\"isPrimaryKey\\": true
        },
        \\"notes\\": {
          \\"type\\": \\"string\\",
          \\"isLong\\": true
        }
      }
    },
    \\"user\\": {
      \\"description\\": \\"A user of the platform\\",
      \\"includes\\": {
        \\"common\\": true
      },
      \\"fields\\": {
        \\"name\\": {
          \\"description\\": \\"Name of the user\\",
          \\"type\\": \\"string\\",
          \\"isRequired\\": true,
          \\"isUnique\\": true
        },
        \\"surname\\": {
          \\"type\\": \\"string\\"
        },
        \\"aBoolean\\": {
          \\"type\\": \\"boolean\\",
          \\"isRequired\\": true,
          \\"defaultValue\\": false
        }
      }
    },
    \\"project\\": {
      \\"includes\\": {
        \\"common\\": true
      },
      \\"fields\\": {
        \\"name\\": {
          \\"type\\": \\"string\\"
        }
      },
      \\"relations\\": {
        \\"projectManager\\": {
          \\"model\\": \\"user\\",
          \\"isRequired\\": true
        },
        \\"technicalManager\\": {
          \\"model\\": \\"user\\"
        }
      }
    }
  }
}"
`;

exports[`JSON in/out schema1.yaml + schema2.yaml -> json 1`] = `
"{
  \\"models\\": {
    \\"common\\": {
      \\"isIncludeOnly\\": true,
      \\"fields\\": {
        \\"id\\": {
          \\"type\\": \\"uuid\\",
          \\"isPrimaryKey\\": true
        },
        \\"notes\\": {
          \\"type\\": \\"string\\",
          \\"isLong\\": true
        }
      }
    },
    \\"user\\": {
      \\"description\\": \\"A user of the platform\\",
      \\"includes\\": {
        \\"common\\": true
      },
      \\"fields\\": {
        \\"name\\": {
          \\"description\\": \\"Name of the user\\",
          \\"type\\": \\"string\\",
          \\"isRequired\\": true,
          \\"isUnique\\": true
        },
        \\"surname\\": {
          \\"type\\": \\"string\\"
        },
        \\"aBoolean\\": {
          \\"type\\": \\"boolean\\",
          \\"isRequired\\": true,
          \\"defaultValue\\": false
        }
      }
    },
    \\"project\\": {
      \\"includes\\": {
        \\"common\\": true
      },
      \\"fields\\": {
        \\"name\\": {
          \\"type\\": \\"string\\"
        },
        \\"startDate\\": {
          \\"type\\": \\"date\\",
          \\"noTime\\": true
        },
        \\"endDate\\": {
          \\"type\\": \\"date\\",
          \\"noTime\\": true
        }
      },
      \\"relations\\": {
        \\"projectManager\\": {
          \\"model\\": \\"user\\",
          \\"isRequired\\": true
        },
        \\"technicalManager\\": {
          \\"model\\": \\"user\\",
          \\"inverse\\": false
        },
        \\"creator\\": {
          \\"model\\": \\"user\\",
          \\"inverse\\": {
            \\"name\\": \\"createdProjects\\"
          }
        }
      }
    }
  }
}"
`;

exports[`JSON in/out schema1.yaml -> json 1`] = `
"{
  \\"models\\": {
    \\"common\\": {
      \\"isIncludeOnly\\": true,
      \\"fields\\": {
        \\"id\\": {
          \\"type\\": \\"uuid\\",
          \\"isPrimaryKey\\": true
        },
        \\"notes\\": {
          \\"type\\": \\"string\\",
          \\"isLong\\": true
        }
      }
    },
    \\"user\\": {
      \\"description\\": \\"A user of the platform\\",
      \\"includes\\": {
        \\"common\\": true
      },
      \\"fields\\": {
        \\"name\\": {
          \\"description\\": \\"Name of the user\\",
          \\"type\\": \\"string\\",
          \\"isRequired\\": true,
          \\"isUnique\\": true
        },
        \\"surname\\": {
          \\"type\\": \\"string\\"
        },
        \\"aBoolean\\": {
          \\"type\\": \\"boolean\\",
          \\"isRequired\\": true,
          \\"defaultValue\\": false
        }
      }
    },
    \\"project\\": {
      \\"includes\\": {
        \\"common\\": true
      },
      \\"fields\\": {
        \\"name\\": {
          \\"type\\": \\"string\\"
        }
      },
      \\"relations\\": {
        \\"projectManager\\": {
          \\"model\\": \\"user\\",
          \\"isRequired\\": true
        },
        \\"technicalManager\\": {
          \\"model\\": \\"user\\",
          \\"inverse\\": false
        }
      }
    }
  }
}"
`;
